syntax = "proto3";

package io.fiap.fastfood;

/*import "/Users/icarodamiani/Workspace/gRPC/google/protobuf/empty.proto";
import "/Users/icarodamiani/Workspace/gRPC/google/protobuf/timestamp.proto";;*/
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_package = "io.fiap.fastfood";
option java_multiple_files = true;
option java_outer_classname = "OrderTrackingProto";

/**
* OrderTracking service
* @author icaro.damiani1
*/
service OrderTrackingService {
    rpc saveOrderTracking(SaveOrderTrackingRequest) returns (OrderTrackingResponse);
    rpc findAllOrderTracking(FindAllOrderTrackingRequest) returns (stream OrderTrackingResponse);
    rpc findOrderTrackingByOrderId(FindOrderTrackingByOrderIdRequest) returns (OrderTrackingResponse);
}

message SaveOrderTrackingRequest {
     optional string id = 1;
     string orderId = 2;
     string orderNumber = 3;
     OrderTrackingStatus orderStatus = 4;
     google.protobuf.Timestamp orderDateTime = 6;
}

message FindAllOrderTrackingRequest {
    optional OrderTrackingRole role = 3;
}

message FindOrderTrackingByOrderIdRequest {
    string orderId = 1;
}

message OrderTrackingResponse {
     optional string id = 1;
     string orderId = 2;
     string orderNumber = 3;
     OrderTrackingStatus orderStatus = 4;
     OrderTrackingRole role = 5;
     google.protobuf.Timestamp orderDateTime = 6;
     int64 totalTimeSpent = 7;
}

enum OrderTrackingStatus {
    WAITING_PAYMENT = 0;
    PAYMENT_CONFIRMED = 1;
    PREPARING = 2;
    READY = 3;
    FINISHED = 4;
    CANCELED = 5;
}

enum OrderTrackingRole {
    CLIENT = 0;
    EMPLOYEE = 1;
    ALL = 2;
}